--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
     "chartjs-plugin-dragdata": "^1.1.3",
+    "mic-recorder-to-mp3": "^2.2.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
+    "react-h5-audio-player": "^3.5.0",
+    "react-mic": "^12.4.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
