--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mic-recorder-to-mp3": "^2.2.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-bootstrap-icons": "^1.1.0",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-h5-audio-player": "^3.5.0",
