--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
     "chartjs-plugin-dragdata": "^1.1.3",
+    "cloudinary": "^1.23.0",
+    "cloudinary-core": "^2.11.3",
+    "dotenv": "^8.2.0",
     "mic-recorder-to-mp3": "^2.2.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
